# XRCX_Puzzlebot

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
puzzlebot_description/: CMakeLists.txt  package.xml
puzzlebot_description/launch/: puzzlebot_description.launch.xml
puzzlebot_description/meshes/: Puzzlebot_Caster_Wheel.stl
puzzlebot_description/meshes/Sensor/: RPLidar.stl
puzzlebot_description/rviz/: puzzlebot_description.rviz
puzzlebot_description/urdf/: joints.xacro  links.xacro  materials.xacro  puzzlebot.urdf  puzzlebot.xacro  puzzlebot_control.xacro
puzzlebot_description/urdf/base/: puzzlebot_base.urdf.xacro
puzzlebot_description/urdf/control/: puzzlebot_control.xacro
puzzlebot_description/urdf/sensors/: lidar.xacro  macros.xacro  parameters_jetson_lidar_ed.xacro
puzzlebot_gazebo/: CMakeLists.txt  package.xml
puzzlebot_gazebo/config/: gazebo_bridge.yaml
puzzlebot_gazebo/launch/: puzzlebot_description.launch.xml  puzzlebot_gazebo.launch.xml
puzzlebot_gazebo/worlds/: maze.world  maze_world.world
puzzlebot_navigation/: CMakeLists.txt  package.xml
puzzlebot_navigation/config/: nav2_params.yaml
puzzlebot_navigation/launch/: nav2.launch.xml  nav2_core.launch.xml  slam.launch.xml  slam_core.launch.xml
puzzlebot_navigation/maps/: map.pgm  map.yaml
puzzlebot_navigation/rviz/: slam.rviz
puzzlebot_navigation2/: CMakeLists.txt
puzzlebot_navigation2/launch/: nav2.launch.xml  nav2_core.launch.xml  slam.launch.xml
puzzlebot_navigation2/maps/: map.pgm  map.yaml
src/puzzlebot_ros2/puzzlebot_description/: CMakeLists.txt
src/puzzlebot_ros2/puzzlebot_gazebo/: CMakeLists.txt
src/puzzlebot_ros2/puzzlebot_navigation/: CMakeLists.txt  package.xml
src/puzzlebot_ws/puzzlebot_gazebo/: CMakeLists.txt
src/puzzlebot_ws/puzzlebot_navigation/: CMakeLists.txt  package.xml
(+61 files in other folders)
