<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pullos3002@gmail.com">aldemarg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>robot_state_publisher</exec_depend >
  <exec_depend>rviz2</exec_depend >
  <exec_depend>nav2_bringup</exec_depend >
  <exec_depend>joint_state_publisher_gui</exec_depend >
  <exec_depend>nav2_bringup</exec_depend >
  <exec_depend>xacro</exec_depend >
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>puzzlebot_description</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>puzzlebot_gazebo</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
